--- a/package.json
+++ b/package.json
@@ -18,14 +18,22 @@
     "cors": "^2.8.5",
     "drizzle-orm": "^0.26.1",
     "esbuild": "0.17.18",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
-    "postgres": "^3.3.4"
+    "postgres": "^3.3.4",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "drizzle-kit": "^0.18.1",
-    "nodemon": "^2.0.22"
+    "eslint": "^8.41.0",
+    "nodemon": "^2.0.22",
+    "prettier-eslint": "^15.0.1"
   }
 }
