--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "drizzle-kit": "^0.18.1",
     "eslint": "^8.41.0",
     "nodemon": "^2.0.22",
-    "prettier-eslint": "^15.0.1"
+    "prettier-eslint": "^15.0.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
